# faceoff

./: .gitignore  Dockerfile  README.md  app.py  dev.dockerfile  main.py  prod.dockerfile  pyproject.toml
.streamlit/: config.toml
scripts/run/: dev.sh
